--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 
-.box-margin-width{
+.margin-width{
     width: 70%;
     margin: auto;
 }
@@ -29,11 +29,34 @@ button{
     padding: 4px 4px;
     border-radius: 4px;
     border-style: solid;
+    border-color: gray
 }
 
 #logo-padding{
     padding: 9px 0px 4px 18px;
     margin-bottom: 20px;
 }
+
+.box-margin-padding{
+    padding: 8px 40px;
+    margin-top: 3px;
+
+}
+
+.checkmark-style{
+    width: 20px;
+    height: 20px;
+    border: 1px solid green;
+    display: inline-block;
+    background-color: rgb(255, 255, 255);
+    color: green;
+    border-radius: 50%;
+    text-align: center;
+}
+
+.paragraph-line-height{
+    line-height: 20px;
+}
+
 
 
